# SkyBlockDB

./: Cargo.toml  README.md
src/: data_proceessing.rs  data_processing.rs  fetch_data.rs  main.rs  structs.rs
