[package]
name = "skyblock-db"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Cubeyond/skyblock-db"
readme = "README.md"

[dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }

# Https
reqwest = { version = "0.11", features = ["json"] }

# Serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

# Polars
polars = "0.36.2"
